--- a/index.html
+++ b/index.html
@@ -571,8 +571,7 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    .reveal { opacity: 0; transform: translateY(16px); transition: opacity 0.65s ease, transform 0.65s ease; }
-    .reveal.visible { opacity: 1; transform: translateY(0); }
+    .reveal { opacity: 1; transform: none; }
 
     /* Hamburger menu for mobile */
     .hamburger {
@@ -603,28 +602,22 @@
       }
 
       .nav-center {
+        display: none;
         position: fixed;
         top: 65px;
         left: 0;
         right: 0;
         background: rgba(245,242,237,0.98);
-        backdrop-filter: blur(10px);
         flex-direction: column;
         gap: 0;
         padding: 1.5rem 0;
         border-bottom: 1px solid #ddd9d2;
-        transform: translateY(-100%);
-        opacity: 0;
-        transition: transform 0.3s ease, opacity 0.3s ease;
-        pointer-events: none;
         z-index: 99;
         align-items: flex-start;
       }
 
       .nav-center.active {
-        transform: translateY(0);
-        opacity: 1;
-        pointer-events: all;
+        display: flex;
       }
 
       .nav-center li {
@@ -883,28 +876,20 @@
     <span class="footer-loc">North of Ballard · Seattle, WA</span>
   </footer>
 
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
-    const reveals = document.querySelectorAll('.reveal');
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.style.opacity = '1';
-          entry.target.style.transform = 'translateY(0)';
-        }
-      });
-    }, { threshold: 0.1 });
-
-    reveals.forEach(reveal => {
-      reveal.style.opacity = '0';
-      reveal.style.transform = 'translateY(20px)';
-      reveal.style.transition = 'opacity 0.6s ease, transform 0.6s ease';
-      observer.observe(reveal);
-    });
-
-    // Hamburger menu toggle
+  <script>
     const hamburger = document.querySelector('.hamburger');
     const navCenter = document.querySelector('.nav-center');
 
     if (hamburger && navCenter) {
-      hamburger.addEventListener('click', () => {
+      hamburger.addEventListener('click', function() {
         navCenter.classList.toggle('active');
+      });
+      navCenter.querySelectorAll('a').forEach(function(link) {
+        link.addEventListener('click', function() {
+          navCenter.classList.remove('active');
+        });
+      });
+    }
+  </script>
+</body>
+</html>
