--- a/coaching.html
+++ b/coaching.html
@@ -56,6 +56,51 @@
       transition: color 0.2s;
     }
     .nav-center a:hover { color: #b8860b; }
+    .nav-dropdown { position: relative; }
+    .nav-dropdown > a { display: flex; align-items: center; gap: 0.3rem; }
+    .nav-dropdown > a::after {
+      content: '';
+      display: inline-block;
+      width: 0; height: 0;
+      border-left: 4px solid transparent;
+      border-right: 4px solid transparent;
+      border-top: 4px solid #6b6860;
+      transition: transform 0.2s, border-top-color 0.2s;
+      margin-top: 1px;
+    }
+    .nav-dropdown:hover > a::after { transform: rotate(180deg); border-top-color: #b8860b; }
+    .nav-dropdown:hover > a { color: #b8860b; }
+    .dropdown-menu {
+      position: absolute;
+      top: 100%; left: 50%;
+      transform: translateX(-50%);
+      padding-top: 0.75rem;
+      min-width: 200px;
+      list-style: none;
+      opacity: 0; visibility: hidden;
+      transition: opacity 0.2s ease, visibility 0.2s;
+      pointer-events: none;
+    }
+    .dropdown-inner {
+      background: rgba(245,242,237,0.98);
+      backdrop-filter: blur(10px);
+      border: 1px solid #ddd9d2;
+      border-top: 2px solid #b8860b;
+    }
+    .nav-dropdown:hover .dropdown-menu { opacity: 1; visibility: visible; pointer-events: all; }
+    .dropdown-menu li { border-bottom: 1px solid #e8e5dd; }
+    .dropdown-menu li:last-child { border-bottom: none; }
+    .dropdown-menu a {
+      display: block;
+      padding: 0.85rem 1.4rem;
+      color: #3d3d3a;
+      font-size: 0.85rem;
+      font-weight: 500;
+      letter-spacing: 0.03em;
+      white-space: nowrap;
+      transition: color 0.2s, background 0.2s;
+    }
+    .dropdown-menu a:hover { color: #b8860b; background: rgba(184,134,11,0.04); }
     .nav-cta {
       display: inline-block;
       padding: 0.6rem 1.4rem;
@@ -188,10 +233,46 @@
     .footer-logo { font-weight: 600; letter-spacing: 0.08em; text-transform: uppercase; color: #1a1a18; }
 
     @media (max-width: 768px) {
-      .hamburger { display: flex; }
+            .hamburger { display: flex; }
       nav { padding: 1rem 1.5rem; }
-      .nav-logo { font-size: 0.8rem; }
+      .nav-logo { font-size: 0.7rem; line-height: 1.1; max-width: 85px; }
       .nav-cta { display: none; }
+      .nav-dropdown > a::after { display: none; }
+      .dropdown-menu {
+        position: static; transform: none;
+        opacity: 1; visibility: visible;
+        border: none; background: transparent;
+        padding: 0.5rem 0 0 1rem;
+        pointer-events: all;
+      }
+      .dropdown-menu li { border-bottom: none; padding: 0; }
+      .dropdown-menu a { padding: 0.5rem 0; font-size: 0.9rem; color: #6b6860; }
+      .nav-center {
+        display: none;
+        position: fixed;
+        top: 65px; left: 0; right: 0;
+        background: rgba(245,242,237,0.98);
+        flex-direction: column;
+        gap: 0;
+        padding: 1.5rem 0;
+        border-bottom: 1px solid #ddd9d2;
+        z-index: 99;
+        align-items: flex-start;
+      }
+      .nav-center.active { display: flex; }
+      .nav-center li { padding: 1rem 3rem; border-bottom: 1px solid #e8e5dd; width: 100%; }
+      .nav-center li:last-child { border-bottom: none; }
+      .nav-center a { font-size: 1rem; line-height: 1.2; }
+      .nav-dropdown > a::after { display: none; }
+      .dropdown-menu {
+        position: static; transform: none;
+        opacity: 1; visibility: visible;
+        border: none; background: transparent;
+        padding: 0.5rem 0 0 1rem;
+        pointer-events: all;
+      }
+      .dropdown-menu li { border-bottom: none; padding: 0; }
+      .dropdown-menu a { padding: 0.5rem 0; font-size: 0.9rem; color: #6b6860; }
 
       .nav-center {
         display: none;
@@ -221,19 +302,26 @@
 </head>
 <body>
 
-  <nav>
+    <nav>
     <a href="index.html" class="nav-logo">The Integration Gym</a>
     <button class="hamburger" aria-label="Open menu">
       <span></span><span></span><span></span>
     </button>
     <ul class="nav-center">
       <li><a href="index.html#gap">The Work</a></li>
-      <li><a href="cohorts.html">March Cohort</a></li>
-      <li><a href="tigd-weekend-workshop.html">May Workshop</a></li>
-      <li><a href="coaching.html">1:1 Coaching</a></li>
+      <li class="nav-dropdown">
+        <a href="#">Get Started</a>
+        <ul class="dropdown-menu">
+          <div class="dropdown-inner">
+            <li><a href="cohorts.html">March Cohort</a></li>
+            <li><a href="tigd-weekend-workshop.html">May Workshop</a></li>
+            <li><a href="coaching.html">1:1 Coaching</a></li>
+          </div>
+        </ul>
+      </li>
       <li><a href="index.html#about">About</a></li>
     </ul>
-    <a href="mailto:dirk@integrationgym.org" class="nav-cta">Email Dirk</a>
+    <a href="index.html#contact" class="nav-cta">Schedule a Call</a>
   </nav>
 
   <header class="page-header">
@@ -290,14 +378,14 @@
       </div>
 
       <h2>Next step</h2>
-      <p>Email me directly at <a href="mailto:dirk@integrationgym.org">dirk@integrationgym.org</a>. We'll set up a brief conversation to discuss what you're working with and whether this is the right fit.</p>
+      <p>Email me directly at <a href="/cdn-cgi/l/email-protection#62060b1009220b0c1607051003160b0d0c051b0f4c0d1005"><span class="__cf_email__" data-cfemail="791d100b123910170d1c1e0b180d1016171e001457160b1e">[email&#160;protected]</span></a>. We'll set up a brief conversation to discuss what you're working with and whether this is the right fit.</p>
     </div>
   </section>
 
   <div class="cta-section">
     <h3>Schedule a conversation</h3>
     <p>20 minutes to discuss what you're working with and whether 1:1 sessions make sense.</p>
-    <a href="mailto:dirk@integrationgym.org" class="btn-primary">Email Dirk</a>
+    <a href="/cdn-cgi/l/email-protection#d7b3bea5bc97beb9a3b2b0a5b6a3beb8b9b0aebaf9b8a5b0" class="btn-primary">Email Dirk</a>
   </div>
 
   <footer>
@@ -305,19 +393,7 @@
     <span>North of Ballard · Seattle, WA</span>
   </footer>
 
-  <script>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     var hamburger = document.querySelector('.hamburger');
     var navCenter = document.querySelector('.nav-center');
-    if (hamburger && navCenter) {
-      hamburger.addEventListener('click', function() {
-        navCenter.classList.toggle('active');
-      });
-      navCenter.querySelectorAll('a').forEach(function(link) {
-        link.addEventListener('click', function() {
-          navCenter.classList.remove('active');
-        });
-      });
-    }
-  </script>
-</body>
-</html>
+    if (hamburger &&
