--- a/tigd-weekend-workshop.html
+++ b/tigd-weekend-workshop.html
@@ -6,30 +6,120 @@
 <title>The Way Out Is Through — The Integration Gym</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Jost:wght@300;400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Jost:wght@300;400;500&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 <style>
   *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
-  :root {
-    --ink: #1c1a17;
-    --clay: #b85c38;
-    --warm-bg: #f5f0e8;
-    --parchment: #ede6d6;
-    --moss: #4a5240;
-    --dust: #9e9485;
-    --rule: #d4c9b0;
-  }
-
-  html { scroll-behavior: smooth; }
+html { scroll-behavior: smooth; }
 
   body {
-    background-color: var(--warm-bg);
-    color: var(--ink);
+    background-color: #f5f0e8;
+    color: #1c1a17;
     font-family: 'Jost', sans-serif;
     font-weight: 300;
     line-height: 1.7;
     overflow-x: hidden;
   }
+
+  /* ── NAV ── */
+  nav {
+    position: fixed;
+    top: 0; left: 0; right: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.1rem 3rem;
+    background: rgba(245,242,237,0.96);
+    backdrop-filter: blur(10px);
+    border-bottom: 1px solid #ddd9d2;
+  }
+  .nav-logo {
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 600;
+    font-size: 0.95rem;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+    color: #1a1a18;
+    text-decoration: none;
+  }
+  .nav-center {
+    display: flex;
+    gap: 2.5rem;
+    list-style: none;
+    align-items: center;
+  }
+  .nav-center a {
+    color: #6b6860;
+    text-decoration: none;
+    font-size: 0.88rem;
+    font-weight: 500;
+    letter-spacing: 0.03em;
+    transition: color 0.2s;
+    font-family: 'DM Sans', sans-serif;
+  }
+  .nav-center a:hover { color: #b8860b; }
+  .nav-dropdown { position: relative; }
+  .nav-dropdown > a { display: flex; align-items: center; gap: 0.3rem; }
+  .nav-dropdown > a::after {
+    content: '';
+    display: inline-block;
+    width: 0; height: 0;
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-top: 4px solid #6b6860;
+    transition: transform 0.2s, border-top-color 0.2s;
+    margin-top: 1px;
+  }
+  .nav-dropdown:hover > a::after { transform: rotate(180deg); border-top-color: #b8860b; }
+  .nav-dropdown:hover > a { color: #b8860b; }
+  .dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-top: 0.75rem;
+    min-width: 200px;
+    list-style: none;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.2s ease, visibility 0.2s;
+    pointer-events: none;
+  }
+  .dropdown-inner {
+    background: rgba(245,242,237,0.98);
+    backdrop-filter: blur(10px);
+    border: 1px solid #ddd9d2;
+    border-top: 2px solid #b8860b;
+  }
+  .nav-dropdown:hover .dropdown-menu { opacity: 1; visibility: visible; pointer-events: all; }
+  .dropdown-menu li { border-bottom: 1px solid #e8e5dd; }
+  .dropdown-menu li:last-child { border-bottom: none; }
+  .dropdown-menu a {
+    display: block;
+    padding: 0.85rem 1.4rem;
+    color: #3d3d3a;
+    font-size: 0.85rem;
+    white-space: nowrap;
+    transition: color 0.2s, background 0.2s;
+  }
+  .dropdown-menu a:hover { color: #b8860b; background: rgba(184,134,11,0.04); }
+  .nav-cta {
+    display: inline-block;
+    padding: 0.6rem 1.4rem;
+    background: #b8860b;
+    color: #fff;
+    text-decoration: none;
+    font-size: 0.8rem;
+    font-weight: 600;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    transition: background 0.2s;
+    font-family: 'DM Sans', sans-serif;
+  }
+  .nav-cta:hover { background: #9a7009; }
+  .hamburger { display: none; flex-direction: column; gap: 5px; cursor: pointer; padding: 8px; }
+  .hamburger span { display: block; width: 25px; height: 2px; background: #1a1a18; transition: all 0.3s; }
 
   /* ── HERO ── */
   .hero {
@@ -37,6 +127,7 @@
     display: grid;
     grid-template-rows: 1fr auto;
     padding: 0;
+    padding-top: 65px;
     position: relative;
     overflow: hidden;
   }
@@ -66,7 +157,7 @@
     font-size: 0.72rem;
     letter-spacing: 0.22em;
     text-transform: uppercase;
-    color: var(--clay);
+    color: #b85c38;
     margin-bottom: 2.5rem;
     opacity: 0;
     animation: fadeUp 0.8s ease 0.2s forwards;
@@ -78,7 +169,7 @@
     font-size: clamp(3.2rem, 8vw, 7rem);
     line-height: 1.05;
     letter-spacing: -0.01em;
-    color: var(--ink);
+    color: #1c1a17;
     max-width: 14ch;
     opacity: 0;
     animation: fadeUp 0.9s ease 0.4s forwards;
@@ -86,11 +177,11 @@
 
   .hero-title em {
     font-style: italic;
-    color: var(--clay);
+    color: #b85c38;
   }
 
   .hero-period {
-    color: var(--clay);
+    color: #b85c38;
   }
 
   .hero-tagline {
@@ -99,7 +190,7 @@
     font-weight: 400;
     font-style: italic;
     font-size: clamp(1.6rem, 3.2vw, 2.5rem);
-    color: var(--moss);
+    color: #4a5240;
     max-width: 44ch;
     line-height: 1.45;
     opacity: 0;
@@ -113,8 +204,8 @@
     gap: 0;
     opacity: 0;
     animation: fadeUp 0.9s ease 0.8s forwards;
-    border-top: 2px solid var(--rule);
-    border-bottom: 2px solid var(--rule);
+    border-top: 2px solid #d4c9b0;
+    border-bottom: 2px solid #d4c9b0;
     padding: 2.5rem 0;
     width: 100%;
     max-width: 700px;
@@ -126,7 +217,7 @@
     gap: 0.5rem;
     padding-right: 3rem;
     margin-right: 3rem;
-    border-right: 1px solid var(--rule);
+    border-right: 1px solid #d4c9b0;
   }
 
   .meta-item:last-child {
@@ -139,14 +230,14 @@
     font-size: 0.65rem;
     letter-spacing: 0.22em;
     text-transform: uppercase;
-    color: var(--dust);
+    color: #9e9485;
   }
 
   .meta-value {
     font-family: 'Cormorant Garamond', serif;
     font-size: 1.75rem;
     font-weight: 400;
-    color: var(--ink);
+    color: #1c1a17;
     line-height: 1.1;
   }
 
@@ -159,7 +250,7 @@
   .btn-primary {
     display: inline-block;
     padding: 1rem 2.5rem;
-    background: var(--clay);
+    background: #b85c38;
     color: #fff;
     text-decoration: none;
     font-family: 'Jost', sans-serif;
@@ -171,13 +262,13 @@
   }
 
   .btn-primary:hover {
-    background: var(--moss);
+    background: #4a5240;
     transform: translateY(-1px);
   }
 
   .hero-footer {
     padding: clamp(1.5rem, 4vw, 2.5rem) clamp(2rem, 8vw, 8rem);
-    border-top: 1px solid var(--rule);
+    border-top: 1px solid #d4c9b0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -191,14 +282,14 @@
     font-family: 'Cormorant Garamond', serif;
     font-size: 0.95rem;
     letter-spacing: 0.08em;
-    color: var(--dust);
+    color: #9e9485;
   }
 
   .spots {
     font-size: 0.72rem;
     letter-spacing: 0.15em;
     text-transform: uppercase;
-    color: var(--clay);
+    color: #b85c38;
   }
 
   /* ── SECTIONS ── */
@@ -209,7 +300,7 @@
   .rule {
     width: 3rem;
     height: 1px;
-    background: var(--clay);
+    background: #b85c38;
     margin-bottom: 2.5rem;
   }
 
@@ -217,13 +308,13 @@
     font-size: 0.65rem;
     letter-spacing: 0.22em;
     text-transform: uppercase;
-    color: var(--dust);
+    color: #9e9485;
     margin-bottom: 1.5rem;
   }
 
   /* ── OPENING ── */
   .opening {
-    background: var(--parchment);
+    background: #ede6d6;
   }
 
   .opening-grid {
@@ -243,7 +334,7 @@
 
   .opening-left h2 em {
     font-style: italic;
-    color: var(--clay);
+    color: #b85c38;
   }
 
   .opening-right p {
@@ -259,7 +350,7 @@
 
   /* ── WHAT THIS IS ── */
   .what {
-    background: var(--warm-bg);
+    background: #f5f0e8;
   }
 
   .what-intro {
@@ -285,26 +376,26 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
     gap: 0;
-    border: 1px solid var(--rule);
+    border: 1px solid #d4c9b0;
   }
 
   .pillar {
     padding: 2.5rem;
-    border-right: 1px solid var(--rule);
+    border-right: 1px solid #d4c9b0;
     transition: background 0.2s;
   }
 
   .pillar:last-child { border-right: none; }
 
   .pillar:hover {
-    background: var(--parchment);
+    background: #ede6d6;
   }
 
   .pillar-number {
     font-family: 'Cormorant Garamond', serif;
     font-size: 2.5rem;
     font-weight: 300;
-    color: var(--rule);
+    color: #d4c9b0;
     line-height: 1;
     margin-bottom: 1rem;
   }
@@ -314,22 +405,22 @@
     font-weight: 400;
     font-size: 1.3rem;
     margin-bottom: 0.75rem;
-    color: var(--ink);
+    color: #1c1a17;
   }
 
   .pillar p {
     font-size: 0.92rem;
     line-height: 1.75;
-    color: var(--dust);
+    color: #9e9485;
   }
 
   /* ── NOT THIS ── */
   .not-this {
-    background: var(--ink);
-    color: var(--parchment);
+    background: #1c1a17;
+    color: #ede6d6;
   }
 
-  .not-this .rule { background: var(--clay); }
+  .not-this .rule { background: #b85c38; }
 
   .not-this-grid {
     display: grid;
@@ -355,7 +446,7 @@
   }
 
   .not-this p strong {
-    color: var(--parchment);
+    color: #ede6d6;
     font-weight: 400;
   }
 
@@ -378,17 +469,17 @@
     content: '—';
     position: absolute;
     left: 0;
-    color: var(--clay);
+    color: #b85c38;
   }
 
   .distinction-list li strong {
-    color: var(--parchment);
+    color: #ede6d6;
     font-weight: 400;
   }
 
   /* ── SCHEDULE ── */
   .schedule {
-    background: var(--parchment);
+    background: #ede6d6;
   }
 
   .schedule h2 {
@@ -406,7 +497,7 @@
   }
 
   .day {
-    border-top: 2px solid var(--clay);
+    border-top: 2px solid #b85c38;
     padding-top: 2rem;
   }
 
@@ -414,7 +505,7 @@
     font-size: 0.65rem;
     letter-spacing: 0.22em;
     text-transform: uppercase;
-    color: var(--clay);
+    color: #b85c38;
     margin-bottom: 0.5rem;
   }
 
@@ -436,26 +527,26 @@
     gap: 1.5rem;
     align-items: baseline;
     padding-bottom: 0.75rem;
-    border-bottom: 1px solid var(--rule);
+    border-bottom: 1px solid #d4c9b0;
   }
 
   .segment:last-child { border-bottom: none; }
 
   .seg-time {
     font-size: 0.75rem;
-    color: var(--dust);
+    color: #9e9485;
     min-width: 5rem;
     letter-spacing: 0.05em;
   }
 
   .seg-label {
     font-size: 0.95rem;
-    color: var(--ink);
+    color: #1c1a17;
   }
 
   /* ── FOR YOU ── */
   .for-you {
-    background: var(--warm-bg);
+    background: #f5f0e8;
   }
 
   .for-you-grid {
@@ -484,33 +575,33 @@
     display: flex;
     flex-direction: column;
     gap: 0;
-    border: 1px solid var(--rule);
+    border: 1px solid #d4c9b0;
   }
 
   .recognition {
     padding: 1.5rem 2rem;
-    border-bottom: 1px solid var(--rule);
+    border-bottom: 1px solid #d4c9b0;
     font-family: 'Cormorant Garamond', serif;
     font-style: italic;
     font-size: 1.15rem;
     line-height: 1.5;
-    color: var(--moss);
+    color: #4a5240;
     transition: background 0.2s, padding-left 0.2s;
   }
 
   .recognition:last-child { border-bottom: none; }
   .recognition:hover {
-    background: var(--parchment);
+    background: #ede6d6;
     padding-left: 2.5rem;
   }
 
   /* ── LOGISTICS ── */
   .logistics {
-    background: var(--moss);
-    color: var(--parchment);
+    background: #4a5240;
+    color: #ede6d6;
   }
 
-  .logistics .rule { background: var(--parchment); opacity: 0.3; }
+  .logistics .rule { background: #ede6d6; opacity: 0.3; }
 
   .logistics-grid {
     display: grid;
@@ -529,7 +620,7 @@
   .logistics-item .meta-value {
     font-family: 'Cormorant Garamond', serif;
     font-size: 1.2rem;
-    color: var(--parchment);
+    color: #ede6d6;
     line-height: 1.4;
   }
 
@@ -548,13 +639,13 @@
   }
 
   .logistics-note strong {
-    color: var(--parchment);
+    color: #ede6d6;
     font-weight: 400;
   }
 
   /* ── RIVER ── */
   .river-section {
-    background: var(--parchment);
+    background: #ede6d6;
   }
 
   .river-grid {
@@ -575,7 +666,7 @@
   .river-left .subtitle {
     font-size: 0.8rem;
     letter-spacing: 0.1em;
-    color: var(--dust);
+    color: #9e9485;
     text-transform: uppercase;
   }
 
@@ -595,7 +686,7 @@
 
   .credential {
     font-size: 0.85rem;
-    color: var(--dust);
+    color: #9e9485;
     padding-left: 1.25rem;
     position: relative;
   }
@@ -604,7 +695,7 @@
     content: '·';
     position: absolute;
     left: 0;
-    color: var(--clay);
+    color: #b85c38;
     font-size: 1.2rem;
     line-height: 1;
     top: 0.1rem;
@@ -612,7 +703,7 @@
 
   /* ── APPLY ── */
   .apply {
-    background: var(--warm-bg);
+    background: #f5f0e8;
     text-align: center;
   }
 
@@ -631,7 +722,7 @@
 
   .apply h2 em {
     font-style: italic;
-    color: var(--clay);
+    color: #b85c38;
   }
 
   .apply p {
@@ -648,8 +739,8 @@
     flex-wrap: wrap;
     margin-bottom: 3rem;
     padding: 2rem;
-    background: var(--parchment);
-    border: 1px solid var(--rule);
+    background: #ede6d6;
+    border: 1px solid #d4c9b0;
   }
 
   .apply-detail .meta-label { margin-bottom: 0.25rem; }
@@ -661,13 +752,13 @@
   .apply-small {
     margin-top: 1.5rem;
     font-size: 0.8rem;
-    color: var(--dust);
+    color: #9e9485;
     line-height: 1.6;
   }
 
   /* ── FOOTER ── */
   footer {
-    background: var(--ink);
+    background: #1c1a17;
     padding: 2.5rem clamp(2rem, 8vw, 8rem);
     display: flex;
     justify-content: space-between;
@@ -689,7 +780,7 @@
     transition: color 0.2s;
   }
 
-  footer a:hover { color: var(--parchment); }
+  footer a:hover { color: #ede6d6; }
 
   /* ── ANIMATIONS ── */
   @keyframes fadeUp {
@@ -714,7 +805,7 @@
 
     .pillar {
       border-right: none;
-      border-bottom: 1px solid var(--rule);
+      border-bottom: 1px solid #d4c9b0;
     }
 
     .pillar:last-child { border-bottom: none; }
@@ -725,11 +816,33 @@
 </head>
 <body>
 
+  <nav>
+    <a href="index.html" class="nav-logo">The Integration Gym</a>
+    <button class="hamburger" aria-label="Open menu">
+      <span></span><span></span><span></span>
+    </button>
+    <ul class="nav-center">
+      <li><a href="index.html#gap">The Work</a></li>
+      <li class="nav-dropdown">
+        <a href="#">Get Started</a>
+        <ul class="dropdown-menu">
+          <div class="dropdown-inner">
+            <li><a href="cohorts.html">March Cohort</a></li>
+            <li><a href="tigd-weekend-workshop.html">May Workshop</a></li>
+            <li><a href="coaching.html">1:1 Coaching</a></li>
+          </div>
+        </ul>
+      </li>
+      <li><a href="index.html#about">About</a></li>
+    </ul>
+    <a href="index.html#contact" class="nav-cta">Schedule a Call</a>
+  </nav>
+
 <!-- HERO -->
 <section class="hero">
   <div class="hero-texture"></div>
   <div class="hero-inner">
-    <p class="eyebrow">The Integration Gym &nbsp;·&nbsp; Seattle &nbsp;·&nbsp; May 2–3, 2026</p>
+    <p class="eyebrow">Weekend Workshop &nbsp;·&nbsp; Seattle &nbsp;·&nbsp; May 2–3, 2026</p>
     <h1 class="hero-title">The Way Out Is Through<span class="hero-period">.</span></h1>
     <p class="hero-tagline">A two-day facilitated experience for people ready to be more at home in themselves — whatever the circumstances.</p>
     <div class="hero-meta">
@@ -934,4 +1047,11 @@
 <!-- FOOTER -->
 <footer>
   <span class="brand">The Integration Gym & Dojo &nbsp;·&nbsp; IntegrationGym.org</span>
-  <a href="/cdn-cgi/l/email-protection#5a28332c3f281a
+  <a href="/cdn-cgi/l/email-protection#5a28332c3f281adirk@integrationgym.org"><span class="__cf_email__" data-cfemail="4a2e2338210a23243e2f2d382b3e2325242d33276425382d">[email&#160;protected]</span></a>
+</footer>
+
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+  const hamburger = document.querySelector('.hamburger');
+  const navCenter = document.querySelector('.nav-center');
+  if (hamburger && navCenter) {
+    hamburger.addEventListener('click', () => navCente
