--- a/tigd-weekend-workshop.html
+++ b/tigd-weekend-workshop.html
@@ -790,6 +790,36 @@ html { scroll-behavior: smooth; }
 
   /* ── RESPONSIVE ── */
   @media (max-width: 768px) {
+    .hamburger { display: flex !important; }
+    nav { padding: 1rem 1.5rem; }
+    .nav-logo { font-size: 0.7rem; line-height: 1.1; max-width: 85px; }
+    .nav-cta { display: none; }
+    .nav-center {
+      display: none;
+      position: fixed;
+      top: 65px; left: 0; right: 0;
+      background: rgba(245,242,237,0.98);
+      flex-direction: column;
+      gap: 0;
+      padding: 1.5rem 0;
+      border-bottom: 1px solid #ddd9d2;
+      z-index: 99;
+      align-items: flex-start;
+    }
+    .nav-center.active { display: flex !important; }
+    .nav-center li { padding: 1rem 3rem; border-bottom: 1px solid #e8e5dd; width: 100%; }
+    .nav-center li:last-child { border-bottom: none; }
+    .nav-center a { font-size: 1rem; line-height: 1.2; color: #3d3d3a; }
+    .nav-dropdown > a::after { display: none; }
+    .dropdown-menu {
+      position: static; transform: none;
+      opacity: 1; visibility: visible;
+      border: none; background: transparent;
+      padding: 0.5rem 0 0 1rem;
+      pointer-events: all;
+    }
+    .dropdown-menu li { border-bottom: none; padding: 0; }
+    .dropdown-menu a { padding: 0.5rem 0; font-size: 0.9rem; color: #6b6860; }
     .opening-grid,
     .not-this-grid,
     .for-you-grid,
@@ -864,12 +894,11 @@ html { scroll-behavior: smooth; }
       </div>
     </div>
     <div class="hero-cta">
-      <a href="#apply" class="btn-primary">Apply to Attend</a>
+      <a href="mailto:river@integrationgym.org" class="btn-primary">Apply to Attend</a>
     </div>
   </div>
   <div class="hero-footer">
     <span class="brand">IntegrationGym.org</span>
-    <span class="spots">8 spots · Application required</span>
   </div>
 </section>
 
@@ -1034,12 +1063,9 @@ html { scroll-behavior: smooth; }
         <span class="meta-label">Location</span>
         <span class="meta-value">Shared upon acceptance</span>
       </div>
-      <div class="apply-detail meta-item">
-        <span class="meta-label">Spots Remaining</span>
-        <span class="meta-value">8 of 8</span>
-      </div>
+
     </div>
-    <a href="/cdn-cgi/l/email-protection#91e3f8e7f4e3d1f8ffe5f4f6e3f0e5f8fefff6e8fcbffee3f6" class="btn-primary">Apply to Attend</a>
+    <a href="mailto:river@integrationgym.org" class="btn-primary">Apply to Attend</a>
     <p class="apply-small">Reach out at IntegrationGym.org or reply by email.<br>Dirk will follow up to schedule a short conversation.</p>
   </div>
 </section>
@@ -1050,8 +1076,19 @@ html { scroll-behavior: smooth; }
   <a href="/cdn-cgi/l/email-protection#5a28332c3f281adirk@integrationgym.org"><span class="__cf_email__" data-cfemail="4a2e2338210a23243e2f2d382b3e2325242d33276425382d">[email&#160;protected]</span></a>
 </footer>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
-  const hamburger = document.querySelector('.hamburger');
-  const navCenter = document.querySelector('.nav-center');
+<script>
+  var hamburger = document.querySelector('.hamburger');
+  var navCenter = document.querySelector('.nav-center');
   if (hamburger && navCenter) {
-    hamburger.addEventListener('click', () => navCente
+    hamburger.addEventListener('click', function() {
+      navCenter.classList.toggle('active');
+    });
+    navCenter.querySelectorAll('a').forEach(function(link) {
+      link.addEventListener('click', function() {
+        navCenter.classList.remove('active');
+      });
+    });
+  }
+</script>
+</body>
+</html>
