--- a/cohorts.html
+++ b/cohorts.html
@@ -124,17 +124,6 @@
       background: none;
       border: none;
     }
-    .hamburger span { display: block; width: 25px; height: 2px; background: #1a1a18; }
-
-    .hamburger {
-      display: none;
-      flex-direction: column;
-      gap: 5px;
-      cursor: pointer;
-      padding: 8px;
-      background: none;
-      border: none;
-    }
     .hamburger span { display: block; width: 25px; height: 2px; background: #e8e4dc; }
 
     .page-header {
@@ -269,7 +258,7 @@
       nav { padding: 1.2rem 1.5rem; }
       .nav-logo { font-size: 0.8rem; }
 
-      .nav-links {
+      .nav-center {
         display: none;
         position: fixed;
         top: 62px;
@@ -282,10 +271,10 @@
         border-bottom: 1px solid rgba(255,255,255,0.08);
         z-index: 99;
       }
-      .nav-links.active { display: flex; }
-      .nav-links li { padding: 0.9rem 2rem; border-bottom: 1px solid rgba(255,255,255,0.05); }
-      .nav-links li:last-child { border-bottom: none; }
-      .nav-links a { font-size: 1rem; }
+      .nav-center.active { display: flex; }
+      .nav-center li { padding: 0.9rem 2rem; border-bottom: 1px solid rgba(255,255,255,0.05); }
+      .nav-center li:last-child { border-bottom: none; }
+      .nav-center a { font-size: 1rem; }
 
       .page-header { padding: 8rem 1.5rem 3rem; }
       section { padding: 4rem 1.5rem; }
@@ -435,7 +424,7 @@
 
   <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     var hamburger = document.querySelector('.hamburger');
-    var navLinks = document.querySelector('.nav-links');
+    var navLinks = document.querySelector('.nav-center');
     if (hamburger && navLinks) {
       hamburger.addEventListener('click', function() {
         navLinks.classList.toggle('active');
