--- a/cohorts.html
+++ b/cohorts.html
@@ -255,6 +255,7 @@
 
     @media (max-width: 768px) {
       .hamburger { display: flex; }
+      .nav-cta { display: none; }
       nav { padding: 1.2rem 1.5rem; }
       .nav-logo { font-size: 0.8rem; }
 
@@ -422,12 +423,19 @@
     <span class="footer-loc">North of Ballard · Seattle, WA</span>
   </footer>
 
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
-    var hamburger = document.querySelector('.hamburger');
-    var navLinks = document.querySelector('.nav-center');
-    if (hamburger && navLinks) {
-      hamburger.addEventListener('click', function() {
-        navLinks.classList.toggle('active');
+<script>
+  var hamburger = document.querySelector('.hamburger');
+  var navCenter = document.querySelector('.nav-center');
+  if (hamburger && navCenter) {
+    hamburger.addEventListener('click', function() {
+      navCenter.classList.toggle('active');
+    });
+    navCenter.querySelectorAll('a').forEach(function(link) {
+      link.addEventListener('click', function() {
+        navCenter.classList.remove('active');
       });
-      navLinks.querySelectorAll('a').forEach(function(link) {
- 
+    });
+  }
+</script>
+</body>
+</html>
