--- a/tigd-weekend-workshop.html
+++ b/tigd-weekend-workshop.html
@@ -894,7 +894,7 @@ html { scroll-behavior: smooth; }
       </div>
     </div>
     <div class="hero-cta">
-      <a href="mailto:river@integrationgym.org" class="btn-primary">Apply to Attend</a>
+      <a href="/cdn-cgi/l/email-protection#87f5eef1e2f5c7eee9f3e2e0f5e6f3eee8e9e0feeaa9e8f5e0" class="btn-primary">Apply to Attend</a>
     </div>
   </div>
   <div class="hero-footer">
@@ -1065,7 +1065,7 @@ html { scroll-behavior: smooth; }
       </div>
 
     </div>
-    <a href="mailto:river@integrationgym.org" class="btn-primary">Apply to Attend</a>
+    <a href="/cdn-cgi/l/email-protection#6c1e051a091e2c050218090b1e0d180503020b150142031e0b" class="btn-primary">Apply to Attend</a>
     <p class="apply-small">Reach out at IntegrationGym.org or reply by email.<br>Dirk will follow up to schedule a short conversation.</p>
   </div>
 </section>
@@ -1076,19 +1076,11 @@ html { scroll-behavior: smooth; }
   <a href="/cdn-cgi/l/email-protection#5a28332c3f281adirk@integrationgym.org"><span class="__cf_email__" data-cfemail="4a2e2338210a23243e2f2d382b3e2325242d33276425382d">[email&#160;protected]</span></a>
 </footer>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
   var hamburger = document.querySelector('.hamburger');
   var navCenter = document.querySelector('.nav-center');
   if (hamburger && navCenter) {
     hamburger.addEventListener('click', function() {
       navCenter.classList.toggle('active');
     });
-    navCenter.querySelectorAll('a').forEach(function(link) {
-      link.addEventListener('click', function() {
-        navCenter.classList.remove('active');
-      });
-    });
-  }
-</script>
-</body>
-</html>
+  
