--- a/tigd-weekend-workshop.html
+++ b/tigd-weekend-workshop.html
@@ -818,8 +818,9 @@ html { scroll-behavior: smooth; }
       padding: 0.5rem 0 0 1rem;
       pointer-events: all;
     }
-    .dropdown-menu li { border-bottom: none; padding: 0; }
-    .dropdown-menu a { padding: 0.5rem 0; font-size: 0.9rem; color: #6b6860; }
+    .dropdown-menu li { border-bottom: none; padding: 0.25rem 0; }
+    .dropdown-menu a { padding: 0; font-size: 0.88rem; color: #6b6860; }
+    .nav-center > li { padding: 0.6rem 2rem; }
     .opening-grid,
     .not-this-grid,
     .for-you-grid,
@@ -1076,11 +1077,19 @@ html { scroll-behavior: smooth; }
   <a href="/cdn-cgi/l/email-protection#5a28332c3f281adirk@integrationgym.org"><span class="__cf_email__" data-cfemail="4a2e2338210a23243e2f2d382b3e2325242d33276425382d">[email&#160;protected]</span></a>
 </footer>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+<script>
   var hamburger = document.querySelector('.hamburger');
   var navCenter = document.querySelector('.nav-center');
   if (hamburger && navCenter) {
     hamburger.addEventListener('click', function() {
       navCenter.classList.toggle('active');
     });
-  
+    navCenter.querySelectorAll('a').forEach(function(link) {
+      link.addEventListener('click', function() {
+        navCenter.classList.remove('active');
+      });
+    });
+  }
+</script>
+</body>
+</html>
