--- a/cohorts.html
+++ b/cohorts.html
@@ -124,7 +124,7 @@
       background: none;
       border: none;
     }
-    .hamburger span { display: block; width: 25px; height: 2px; background: #e8e4dc; }
+    .hamburger span { display: block; width: 25px; height: 2px; background: #1a1a18; }
 
     .page-header {
       padding: 10rem 3rem 5rem;
@@ -276,6 +276,11 @@
       .nav-center li { padding: 0.9rem 2rem; border-bottom: 1px solid rgba(255,255,255,0.05); }
       .nav-center li:last-child { border-bottom: none; }
       .nav-center a { font-size: 1rem; }
+      .nav-center > li { padding: 0.6rem 2rem; }
+      .nav-dropdown > a::after { display: none; }
+      .dropdown-menu { position: static; transform: none; opacity: 1; visibility: visible; border: none; background: transparent; padding: 0.2rem 0 0 1rem; pointer-events: all; }
+      .dropdown-menu li { border-bottom: none; padding: 0.25rem 0; }
+      .dropdown-menu a { padding: 0; font-size: 0.88rem; color: #8a8578; }
 
       .page-header { padding: 8rem 1.5rem 3rem; }
       section { padding: 4rem 1.5rem; }
