--- a/tigd-weekend-workshop.html
+++ b/tigd-weekend-workshop.html
@@ -911,7 +911,7 @@ html { scroll-behavior: smooth; }
       <h2>Something keeps <em>running.</em><br>You already know what it is.</h2>
     </div>
     <div class="opening-right">
-      <p>You've probably spent real time with yourself. Maybe years. Therapy, meditation, workshops, plant medicine, inner work of one kind or another. You have insight. You can name what you do. You can often see it happening in real time.</p>
+      <p>You've probably spent real time with yourself. Maybe years. Therapy, meditation, workshops, plant medicine, inner work of some kind. You have insight. You can name what you do. You can often see it happening in real time.</p>
       <p>And still — the same loops. The same reactions. The same ways you disappear from yourself, or can't stop being too much of yourself, in the presence of other people. The knowing hasn't quite become different.</p>
       <p>That's not a failure of effort. It's a clue about where the work actually needs to happen.</p>
     </div>
@@ -963,7 +963,7 @@ html { scroll-behavior: smooth; }
       <div class="rule"></div>
       <h2>What makes it different.</h2>
       <p>Most approaches to inner work operate at the level of understanding. You come to know your patterns better. You develop tools to manage them. You have peak experiences that open something for a while.</p>
-      <p>TIGD works at a different level. The premise is that <strong>patterns formed in relationship can only be re-patterned in relationship</strong> — in the live presence of other nervous systems, while the pattern is actually running.</p>
+      <p>The Integration Gym, TIG, works at a different level. The premise is that <strong>patterns formed in relationship can only be re-patterned in relationship</strong> — in the live presence of other nervous systems, while the pattern is actually running.</p>
       <p>The other people in the room aren't witnesses to your process. They're the field in which the process becomes possible. That's the structural difference. That's what this weekend is built on.</p>
     </div>
   </div>
